--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@
 [Ll]ogs/
 [Uu]ser[Ss]ettings/
 Assets/AssetStoreTools*
+Packages/packages-lock.json
 
 # MemoryCaptures can get excessive in size.
 # They also could contain extremely sensitive data
